--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-SUPABASE_URL=https://YOUR-PROJECT.supabase.co
-SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
-SUPABASE_JWT_SECRET=YOUR_SUPABASE_JWT_SECRET
-DATABASE_URL=... # (your postgres connection string)
+SUPABASE_URL=https://yourproject.supabase.co
+SUPABASE_KEY=your-supabase-anon-or-service-key
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
+
+MAILGUN_DOMAIN=your-mailgun-domain.com
+MAILGUN_API_KEY=key-xxxxxxxxxxxxxxxxxxxxxx
+MAILGUN_FROM=you@yourdomain.com
+
+VONAGE_API_KEY=xxxxxxxx
+VONAGE_API_SECRET=xxxxxxxx
+VONAGE_FROM=VonageSMS
